# Workshop_Computer

./: .gitignore  README.md
.github/scripts/: update-readme.py
.github/workflows/: update-readme.yml
Demonstrations+HelloWorlds/Arduino-Pico-earlephilhower/: README.md
Demonstrations+HelloWorlds/Arduino-Pico-earlephilhower/Blinkenlights/: README.md  blinkenlights.uf2
Demonstrations+HelloWorlds/Arduino-Pico-earlephilhower/Blinkenlights/blinkenlights/: blinkenlights.ino
Demonstrations+HelloWorlds/Arduino-Pico-earlephilhower/DSP_Graph_Demo/: DSP_Graph_Demo.ino  readme.md
Demonstrations+HelloWorlds/Arduino-Pico-earlephilhower/SystemTest/: SystemTest.ino  helpers.ino
Demonstrations+HelloWorlds/CircuitPython/: README.md  beatfader_demo.py  code_knobs_demo.py  leds_demo_code.py  mtm_computer.py  two_cv_sines_code.py
Demonstrations+HelloWorlds/Micropython/: README.md  counter.py  cv.py  lights.py  mult_tests.py  pulse_tests.py
Demonstrations+HelloWorlds/Micropython/computer/: lights.py
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/: .gitignore  CMakeLists.txt  ComputerCard.h  LICENSE  README.md  doxygen.conf
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/midi_device/: main.cpp  usb_descriptors.c
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/midi_device_host/: main.cpp  tusb_config.h
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/midi_host/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/normalisation_probe/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/passthrough/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/sample_and_hold/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/sample_upload/: README.md  generate_sample_uf2.html  main.cpp  wav.js
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/second_core/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/sine_wave/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/sine_wave_float/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/ComputerCard/examples/sine_wave_lookup/: main.cpp
Demonstrations+HelloWorlds/PicoSDK/Computer_HelloWorld/: CMakeLists.txt  Computer_HelloWorld.c
documentation/: uploads.md
documentation/Program_Card_annotation/: Annotated_program_cards.ai  Blank_program_cards.ai
releases/: README.md
releases/00_Simple_MIDI/: README.md  info.yaml
releases/00_Simple_MIDI/Arduino Code/Simple_Midi_0_5_0/: CV.h  DACChannel.h  Simple_Midi_0_5_0.ino  calibration.h  click.h  config.h  helpers.ino
releases/00_Simple_MIDI/uf2 Installer/: Simple_Midi_0_5_0.ino.uf2
releases/03_Turing_Machine/: info.yaml
releases/03_Turing_Machine/Arduino Code/03_TuringMachine_0_1_0/: 03_TuringMachine_0_1_0.ino  CV.h  DACChannel.h  ResponsiveAnalogRead.h  calibration.h  click.h  config.h  helpers.ino  output.h  quantize.h  turing.h
releases/03_Turing_Machine/uf2 Installer/: 03_TuringMachine_0_1_0.uf2
releases/04_BYO_Benjolin/: .gitignore  CMakeLists.txt  info.yaml  main.cpp
releases/04_BYO_Benjolin/UF2/: byo_benjolin.uf2
releases/04_Turbulence_Machine/: CMakeLists.txt  info.yaml  main.cpp  quantiser.h
releases/04_Turbulence_Machine/UF2/: turbulence_machine.uf2
releases/04_Weirding_Machine/: CMakeLists.txt  main.cpp
releases/05_chord_blimey/: info.yaml
releases/05_chord_blimey/binaries/: chord_blimey.uf2
releases/05_chord_blimey/src/: CMakeLists.txt  computer.cpp  computer.h  main.cpp  ui.cpp  ui.h
releases/06_usb_audio/: CMakeLists.txt  README.md  computer.h  info.yaml  mtm_computer_16mb.h  usb_audio.c  usb_device.c  usb_sound_card.c
releases/07_bumpers/: README.md  info.yaml
releases/07_bumpers/src/: CMakeLists.txt  bumpers.cpp
releases/08_bytebeat/: README.md  info.yaml
releases/08_bytebeat/Arduino Code/08_bytebeat/: 08_bytebeat.ino  ResponsiveAnalogRead.h  formulas.cpp  formulas.h  helpers.ino  tinyexpr_bitw.c
releases/08_bytebeat/Binaries/: 08_bytebeat.ino.elf
releases/08_bytebeat/uf2 Installer/: 08_bytebeat.ino.uf2
releases/10_twists/: README.md  info.yaml
releases/10_twists/src/: CMakeLists.txt
releases/10_twists/src/braids/: analog_oscillator.cc  envelope.h  midi_message.h  resources.cc  resources.h  settings.cc  settings.h  twists.cc  ui.cc  ui.h  usb_descriptors.cc  usb_worker.cc  usb_worker.h
releases/10_twists/uf2 Installer/: twists.uf2
releases/11_goldfish/: CMakeLists.txt  TODO  divider.h  info.yaml  main.cpp  temp_delay  temp_looper
releases/11_goldfish/UF2/: goldfish.uf2
releases/12_am_coupler/: CMakeLists.txt  ComputerCard.h  README.md  WavFile.h  info.yaml  main.cpp
releases/14_cvmod/: CMakeLists.txt  ComputerCard.h  LICENSE  README.md  cvmod.cpp  info.yaml
releases/20_reverb/: CMakeLists.txt  README.md  bernoulligate.h  clock.h  computer.h  divider.h  info.yaml  noise_gate.h  reverb.c  reverb.html  reverb_dsp.c  reverb_dsp.h  sysex_sentences.h  turingmachine.h  verb_int.c  verb_int.h
releases/23_SlowMod/: info.yaml
releases/24_crafted_volts/: README.md  info.yaml
releases/25_utility_pair/: README.md  info.yaml
releases/28_eighties_bass/: 28_eighties_bass.ino  MTM_Computer.h  README.md  info.yaml
releases/30_cirpy_wavetable/: README.md  code.py  info.yaml  requirements.txt
releases/37_compulidean/: README.md  info.yaml
releases/38_od/: README.md  info.yaml
releases/42_backyard_rain/: README.md  info.yaml
releases/53_glitter/: README.md  glitter_v0.1.0-beta.uf2  glitter_v0.1.2-beta.uf2
releases/55_fifths/: CMakeLists.txt  click.h  info.yaml  main.cpp  quantiser.h
releases/55_fifths/UF2/: fifths.uf2
releases/77_Placeholder/: info.yaml
releases/78_Talker/: COPYING  README.md  info.yaml
releases/78_Talker/src/: TalkiePCM.h  main.cpp
releases/78_Talker/uf2 Installer/: 78_Talker.uf2
releases/88_Blank/: info.yaml
(+16 files in other folders)
